--- a/Project 2/docker-compose.yml
+++ b/Project 2/docker-compose.yml
@@ -1,6 +1,10 @@
-version: '3'
+version: '3.3'
 services:
- app:
-  build: .
-  ports:
-    - '8080:8080'
+    mongo_project:
+        image: mongo:4.2.5
+    project_part2:
+        build: .
+        environment:
+            WAIT_HOSTS: mongo:27017
+        ports:
+            - '8080:8080'
