--- a/Project 2/Dockerfile
+++ b/Project 2/Dockerfile
@@ -4,5 +4,9 @@ WORKDIR /root
 COPY . .
 # Download dependancies
 RUN pip3 install -r requirements.txt
-EXPOSE 8080
-CMD python3 -u web.py
+EXPOSE 8000
+#Add this for MongoDB
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
+RUN chmod +x /wait
+
+CMD /wait && python3 -u web.py
