--- a/Project 2/docker-compose.yml
+++ b/Project 2/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 services:
- app:
-  build: .
+mongo_host:
+  image: mongo:4.2.5
   ports:
-    - '8080:8080'
+    - '27017:27017'
+app:
+  build: .
+environment:
+    WAIT_HOSTS: mongo_host:27017
+ports:
+    - '8000:8000'
