--- a/Project-4/NewRome/Dockerfile
+++ b/Project-4/NewRome/Dockerfile
@@ -11,4 +11,4 @@ EXPOSE 8080
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
 RUN chmod +x /wait
 
-CMD /wait && python3 -u web.py
+CMD /wait && python3 -u server.py
